--- a/html/incall.html
+++ b/html/incall.html
@@ -40,7 +40,7 @@
     </body>
 
     <script>
-        const baseUrl = `https://stringee.shinecenter.vn/1.0/auth`;
+        const baseUrl = `http://localhost:4000/1.0/auth`;
         const inputElm = document.getElementById('phone');
         const buttonElm = document.getElementById('submit');
         const resultElm = document.getElementById('result');
