[UPDATE] - thêm chức năng user gọi đến tổng đài để nghe mã OTP

--- a/html/outcall.html
+++ b/html/outcall.html
@@ -10,7 +10,10 @@
     <body style="color: white; background-color: #607D8B; margin-top: 50px;">
 
         <div style="text-align: center;">
-            <div><h2>STRINGEE OTP OUT CALL SAMPLE</h2></div>
+            <div>
+                <h2>STRINGEE OTP OUT CALL SAMPLE</h2>
+                <p>Tổng đài sẽ gọi đến số của bạn và phát mã OTP trong cuộc gọi</p>
+            </div>
             <div>
                 <h2>Vui lòng nhập số điện thoại để tiếp tục</h2>
                 <div>
@@ -47,7 +50,7 @@
     </body>
 
     <script>
-        const baseUrl = `http://localhost:4000/1.0/auth`;
+        const baseUrl = `https://hubsms123.com/1.0/auth`;
         const inputElm = document.getElementById('phone');
         const buttonElm = document.getElementById('submit');
         const resultElm = document.getElementById('result');
