--- a/html/incall2.html
+++ b/html/incall2.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>STRINGEE OTP OUT CALL SAMPLE</title>
+        <title>STRINGEE OTP IN CALL-2 SAMPLE</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
